--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    input[type="button"]{
+        width: 20%;
+        height:5vh;
+    }
+</style>
 <body>
+    <input type="button" value="click me" onclick="showData">
+    <article id="currentData"></article>
     <script src="assets/js/main.js"></script>
+
+   
+  
 </body>
 </html>
